# haskell-batteries

./: batteries.cabal  package.yaml
src/: Batteries.hs
src/Control/Monad/: Batteries.hs
src/Data/Bifunctor/: Batteries.hs
src/Data/Char/: Batteries.hs
src/Data/Either/: Batteries.hs
src/Data/Function/: Batteries.hs
src/Data/Ix/: Batteries.hs
src/Data/List/: Batteries.hs
src/Data/String/: ANSI.hs  Batteries.hs
src/Data/Text/: Batteries.hs
src/System/IO/: Batteries.hs
