name:                batteries
version:             0.1.0.0
synopsis:            Base types with batteries included
description:         Provides additional utility functions for basic types.
homepage:            https://github.com/letheed/haskell-batteries
bug-reports:         https://github.com/letheed/haskell-batteries/issues
license:             BSD3
license-file:        LICENSE
author:              Letheed
maintainer:          dev@daweb.se
copyright:           2016 Letheed
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Batteries
                     , Control.Monad.Batteries
                     , Data.Bifunctor.Batteries
                     , Data.Char.Batteries
                     , Data.Either.Batteries
                     , Data.Function.Batteries
                     , Data.List.Batteries
                     , Data.String.ANSI
                     , Data.String.Batteries
                     , System.IO.Batteries
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/letheed/haskell-batteries
